tests/pos/i13128/A_1.scala
opaque type Foo[T <: Int] = Int
