tests/neg/i13377/coreFoo_1.scala
package core

opaque type Foo[T] <: Int = Int
type LeakingFoo[T] = Foo[T]
